--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8050
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=admin
-spring.datasource.url=jdbc:postgresql://ep-red-butterfly-16754371.eu-central-1.pg.koyeb.app/koyebdb?user=koyeb-adm&password=GHlZew0Lq9OW
+spring.datasource.url=jdbc:postgresql://ep-withered-salad-a4wkmylu-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb
 spring.datasource.username=default
-spring.datasource.password=cwd9a1IrDMPx
+spring.datasource.password=3LreyOVYu2fZ
 spring.jpa.show-sql=true
 spring.datasource.data=schema.sql
 spring.jpa.hibernate.ddl-auto = none
