--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8050
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=admin
-spring.datasource.url=jdbc:postgresql://ep-withered-salad-a4wkmylu-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb
-spring.datasource.username=default
-spring.datasource.password=3LreyOVYu2fZ
+spring.datasource.url=jdbc:postgresql://dpg-cpbjgm7sc6pc73aakp4g-a.frankfurt-postgres.render.com/postgres_xxn7
+spring.datasource.username=postgres_xxn7_user
+spring.datasource.password=y50RU7JgltkUYa7Ozdwp0se6BE7QlpOg
 spring.jpa.show-sql=true
 spring.datasource.data=schema.sql
 spring.jpa.hibernate.ddl-auto = none
